add ai test
